--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "vue-tsc && vite build --outDir /var/www/dist",
     "preview": "vite preview"
   },
@@ -18,7 +18,8 @@
     "quasar": "^2.14.3",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
-    "vue3-carousel": "^0.3.1"
+    "vue3-carousel": "^0.3.1",
+    "vue3-charts": "^1.1.33"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.6.0",
