--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_APP_BASE_URL=https://api.krypton.uz
-VITE_APP_ADMIN_BASE_URL=https://api.krypton.uz
+VITE_APP_BASE_URL=https://api.kiwi1.uz
+VITE_APP_ADMIN_BASE_URL=https://api.kiwi1.uz
